# PostgresTool

./: .env.example  .gitignore  .gitleaks.toml  .prettierrc.json  .~lock.FATHOM_Competitive_Matrix.xlsx#  AUDIT_REPORT_DemoMongoDBTab.txt  DemoMySQLTab_renderContent_AUDIT.txt  FATHOM-TypeScript-TechStack.md  FATHOM_Competitive_Matrix.xlsx  FATHOM_SOC2_Controls_Checklist.md  FATHOM_Strategic_Competitive_Roadmap.docx  FATHOM_vs_Market.pptx  FeedbackModal.jsx  MongoDB_Metrics_Preview.html  MySQL_Metrics_Preview.html  PostgreSQL_Metrics_Preview.html  README.md  ROADMAP_CODE_AUDIT.md  ROADMAP_IMPLEMENTATION.md  SDK_BUILD_SUMMARY.md  TESTING_FRAMEWORK_SUMMARY.txt  TYPESCRIPT-SETUP.md  VIGIL-TypeScript-TechStack.md  VIGIL_Audit_Report.docx  VIGIL_Competitive_Gap_Analysis.docx  VIGIL_Competitor_Comparison.xlsx  VIGIL_Complete_Metrics_Registry.xlsx  VIGIL_Full_Audit_Report.docx  VIGIL_Implementation_Roadmap.docx  VIGIL_Implementation_Roadmap_2026.docx  VIGIL_Market_Comparison_2026Q2.docx  VIGIL_Market_Comparison_and_Gap_Analysis.docx  VIGIL_SOC2_Controls_Checklist.md  Vigil_Code_Audit_Report.docx  Vigil_Technical_Documentation.docx  Vigil_User_Guide.docx  analytics-preview.html  apply-vercel-log-fix.ps1  ci-fix.patch  connections-preview.html  (+14 more)
.semgrep/: fathom-rules.yml  vigil-rules.yml
api/: index.js
backend/: .env.example  db.js  db.ts  drizzle.config.ts  email-notification-service.js  enhanced-alerts.js  index.js  index.ts  neon-migrate.mjs  package-lock.json  (+5 more)
python/: Dockerfile  README.md  pyproject.toml  railway.json  requirements.txt
python/analysis/: __init__.py  performance_report.py  query_analyzer.py  table_stats.py
python/api/: config.py  main.py
python/api/routes/: analytics.py  anomaly.py  ml.py
python/ml/: __init__.py  anomaly_detector.py  capacity_predictor.py  forecaster.py  query_classifier.py
python/tests/: test_analysis.py  test_ml.py
sdk/python/: LICENSE  README.md  pyproject.toml
sdk/python/examples/: fastapi_app.py
sdk/python/pytest-cache-files-dfhmwmfw/v/cache/: nodeids
sdk/python/src/fathom_sdk/: __init__.py  _version.py  batcher.py  client.py  events.py  span_batcher.py  tracer.py  transport.py
sdk/python/src/fathom_sdk/integrations/: __init__.py  django.py  fastapi.py  wsgi.py
sdk/python/tests/: __init__.py  test_batcher.py  test_client.py  test_fastapi_middleware.py  test_tracer.py  test_transport.py
(+783 files in other folders)
